# termite

./: CMakeLists.txt
examples/: hello_world.cpp
include/: termite.hpp
include/termite/: app.hpp  clock.hpp  input.hpp
include/termite/char/: key.hpp  utf8char.hpp
include/termite/geometry/: layout.hpp  rect.hpp  vec2.hpp
include/termite/rendering/: canvas.hpp  cell.hpp  color.hpp  terminal.hpp
src/: app.cpp  canvas.cpp  clock.cpp  input.cpp  terminal.cpp
